--- a/index.html
+++ b/index.html
@@ -30,13 +30,8 @@
     <main>
         
         <section>
-
+            section
         </section>
-
-        <aside>
-
-
-        </aside>
 
     </main>
 
