--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             eng
         </button>
         <ul>
-            <li>
-                <a href="/">Documentation</a>
-                <a href="/using">Who's using</a>
-            </li>
+
+            <li><a href="/">Documentation</a></li>
+            <li>/</li>
+            <li><a href="/using">Who's using</a></li>
         </ul>
         <img src="assets/logo.svg" alt="logo">
     </header>
@@ -48,78 +48,104 @@
         <section>
             <ul>
                 <li>
-                    <h2>Introduction<sup>Chapter 1</sup></h2>
-                    <p>
-                        Welcome to the very start of your React Native journey! If you're looking for environment setup
-                        instructions, they've moved to their own section. Continue reading for an introduction to the
-                        documentation, Native Components, React, and more!
-                    </p>
+                    <article>
+                        <h2>Introduction<sup>Chapter 1</sup></h2>
+                        <p>
+                            Welcome to the very start of your React Native journey! If you're looking for environment
+                            setup
+                            instructions, they've moved to their own section. Continue reading for an introduction to
+                            the
+                            documentation, Native Components, React, and more!
+                        </p>
+                    </article>
                 </li>
                 <li>
-                    <h2>core components<sup>Chapter 2</sup></h2>
-                    <p>
-                        React Native is an open source framework for building Android and iOS applications using React
-                        and the app platform’s native capabiles. With React Native, you use JavaScript to access your
-                        platform’s APIs as well as to describe the appearance and behavior of your UI using React
-                        components: bundles of reusable, nestable code. You can learn more about React in the next
-                        section. But first, let’s cover how components work in React Native.
-                    </p>
+                    <article>
+                        <h2>core components<sup>Chapter 2</sup></h2>
+                        <p>
+                            React Native is an open source framework for building Android and iOS applications using
+                            React
+                            and the app platform’s native capabiles. With React Native, you use JavaScript to access
+                            your
+                            platform’s APIs as well as to describe the appearance and behavior of your UI using React
+                            components: bundles of reusable, nestable code. You can learn more about React in the next
+                            section. But first, let’s cover how components work in React Native.
+                        </p>
+                    </article>
                 </li>
                 <li>
-                    <h2>react fundamentals<sup>Chapter 3</sup></h2>
-                    <p>
-                        React Native runs on React, a popular open source library for building user interfaces with
-                        JavaScript. To make the most of React Native, it helps to understand React itself. This section
-                        can get you started or can serve as a refresher course.
-                    </p>
-                    <p>
-                        We’re going to cover the core concepts behind React:
-                    </p>
-                    <ul>
-                        <li>
-                            <h4>+ components.</h4>
-                            <p>The rest of this introduction to React uses cats in its examples: friendly, approachable
-                                creatures that need names and a cafe to work in.</p>
-                        </li>
-                        <li>
-                            <h4>+ JSX.</h4>
-                            <p>
-                                React and React Native use JSX, a syntax that lets you write elements inside JavaScript
-                                like so:
-                            <pre><Text>Hello, I am your cat!</Text></pre>.
-                            </p>
-                            <p>
-                                The React docs have a comprehensive guide to JSX you can refer to learn even more.
-                                Because JSX is JavaScript, you can use variables inside it. Here you are declaring a
-                                name for the cat, name, and embedding it with curly braces inside
-                            <pre><Text></pre>
-                            </p>
-                        </li>
-                        <li>
-                            <h4>+ props.</h4>
-                            <p>Props is short for “properties”. </p>
-                        </li>
-                        <li>
-                            <h4>+ state.</h4>
-                            <p>While you can think of props as arguments you use to configure how components render,
-                                state is like a component’s personal data storage. State is useful for handling data
-                                that changes over time or that comes from user interaction. State gives your components
-                                memory!</p>
-                        </li>
-                    </ul>
+                    <article>
+                        <h2>react fundamentals<sup>Chapter 3</sup></h2>
+                        <p>
+                            React Native runs on React, a popular open source library for building user interfaces with
+                            JavaScript. To make the most of React Native, it helps to understand React itself. This
+                            section
+                            can get you started or can serve as a refresher course.
+                        </p>
+                        <p>
+                            We’re going to cover the core concepts behind React:
+                        </p>
+                        <ul>
+                            <li>
+                                <p><b>components.</b>
+                                    The rest of this introduction to React uses cats in its examples: friendly,
+                                    approachable
+                                    creatures that need names and a cafe to work in.</p>
+                            </li>
+                            <li>
+                                <p>
+                                    <b>JSX.</b>
+                                    React and React Native use JSX, a syntax that lets you write elements inside
+                                    JavaScript
+                                    like so:<pre>&ltText&gtHello, I am your cat!&lt/Text&gt</pre>.
+                                </p>
+                                <p>
+                                    The React docs have a comprehensive guide to JSX you can refer to learn even
+                                    more.
+                                    Because JSX is JavaScript, you can use variables inside it. Here you are
+                                    declaring a
+                                    name for the cat, name, and embedding it with curly braces inside <pre>&ltText&gt</pre>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <b>props.</b>
+                                    Props is short for “properties”.
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <b>state.</b>
+                                    While you can think of props as arguments you use to configure how components
+                                    render,
+                                    state is like a component’s personal data storage. State is useful for handling
+                                    data
+                                    that changes over time or that comes from user interaction. State gives your
+                                    components
+                                    memory!
+                                </p>
+                            </li>
+                        </ul>
+                    </article>
                 </li>
                 <li>
-                    <h2>handling text input<sup>Chapter 4</sup></h2>
-                    <p>
-                        TextInput is a Core Component that allows the user to enter text. It has an onChangeText prop
-                        that takes a function to be called every time the text changed, and an onSubmitEditing prop that
-                        takes a function to be called when the text is submitted.
-                    </p>
-                    <p>
-                        For example, let's say that as the user types, you're translating their words into a different
-                        language. In this new language, every single word is written the same way: 🍕. So the sentence
-                        "Hello there Bob" would be translated as "🍕 🍕".
-                    </p>
+                    <article>
+                        <h2>handling text input<sup>Chapter 4</sup></h2>
+                        <p>
+                            TextInput is a Core Component that allows the user to enter text. It has an onChangeText
+                            prop
+                            that takes a function to be called every time the text changed, and an onSubmitEditing prop
+                            that
+                            takes a function to be called when the text is submitted.
+                        </p>
+                        <p>
+                            For example, let's say that as the user types, you're translating their words into a
+                            different
+                            language. In this new language, every single word is written the same way: 🍕. So the
+                            sentence
+                            "Hello there Bob" would be translated as "🍕 🍕".
+                        </p>
+                    </article>
                 </li>
             </ul>
         </section>
