--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <li><a href="/">Documentation</a></li>
             <li>/</li>
-            <li><a href="/using">Who's using</a></li>
+            <li><a href="pages/using.html">Who's using</a></li>
         </ul>
         <img src="assets/logo.svg" alt="logo">
     </header>
@@ -47,7 +47,7 @@
 
         <section>
             <ul>
-                <li>
+                <li id="introduction">
                     <article>
                         <h2>Introduction<sup>Chapter 1</sup></h2>
                         <p>
@@ -59,7 +59,7 @@
                         </p>
                     </article>
                 </li>
-                <li>
+                <li id="components">
                     <article>
                         <h2>core components<sup>Chapter 2</sup></h2>
                         <p>
@@ -73,7 +73,7 @@
                         </p>
                     </article>
                 </li>
-                <li>
+                <li id="fundamentals">
                     <article>
                         <h2>react fundamentals<sup>Chapter 3</sup></h2>
                         <p>
@@ -128,7 +128,7 @@
                         </ul>
                     </article>
                 </li>
-                <li>
+                <li id="handling">
                     <article>
                         <h2>handling text input<sup>Chapter 4</sup></h2>
                         <p>
