--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </button>
         <ul>
 
-            <li><a href="/">Documentation</a></li>
+            <li><a href="index.html">Documentation</a></li>
             <li>/</li>
-            <li><a href="pages/using.html">Who's using</a></li>
+            <li><a href="using.html">Who's using</a></li>
         </ul>
         <img src="assets/logo.svg" alt="logo">
     </header>
