--- a/using.html
+++ b/using.html
@@ -9,7 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Farro:wght@300;400;500;700&family=Francois+One&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Staatliches&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Documentation</title>
 </head>
 
@@ -20,11 +20,11 @@
         </button>
         <ul>
 
-            <li><a href="/index.html">Documentation</a></li>
+            <li><a href="index.html">Documentation</a></li>
             <li>/</li>
-            <li><a href="/pages/using.html">Who's using</a></li>
+            <li><a href="using.html">Who's using</a></li>
         </ul>
-        <img src="../assets/logo.svg" alt="logo">
+        <img src="assets/logo.svg" alt="logo">
     </header>
     <main class="using-page">
         <h2>Who’s using</h2>
