--- a/using.html
+++ b/using.html
@@ -30,14 +30,14 @@
         <h2>Who’s using</h2>
         <section class="using-links">
             <ul>
-                <li><a href="#"><img src="" alt="">1</a></li>
-                <li><a href="#"><img src="" alt="">2</a></li>
-                <li><a href="#"><img src="" alt="">3</a></li>
-                <li><a href="#"><img src="" alt="">4</a></li>
-                <li><a href="#"><img src="" alt="">5</a></li>
-                <li><a href="#"><img src="" alt="">6</a></li>
-                <li><a href="#"><img src="" alt="">7</a></li>
-                <li><a href="#"><img src="" alt="">8</a></li>
+                <li><a href="#"><img src="assets/facebook.svg" alt="facebook"></a></li>
+                <li><a href="#"><img src="assets/instagramm.svg" alt="instagramm"></a></li>
+                <li><a href="#"><img src="assets/shopify.svg" alt="shopify"></a></li>
+                <li><a href="#"><img src="assets/skype.svg" alt="skype"></a></li>
+                <li><a href="#"><img src="assets/pinterest.svg" alt="pinterest"></a></li>
+                <li><a href="#"><img src="assets/wix.svg" alt="wix"></a></li>
+                <li><a href="#"><img src="assets/salesforce.svg" alt="salesforce"></a></li>
+                <li><a href="#"><img src="assets/soundcloud.svg" alt="soundcloud"></a></li>
             </ul>
         </section>
     </main>
