--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                                     <b>JSX.</b>
                                     React and React Native use JSX, a syntax that lets you write elements inside
                                     JavaScript
-                                    like so: <span>&ltText&gt Hello, I am your cat! &lt/Text&gt.</span>
+                                    like so: <span>&lt;Text&gt; Hello, I am your cat! &lt;/Text&gt;.</span>
                                 </p>
                                 <p>
                                     The React docs have a comprehensive guide to JSX you can refer to learn even
                                     more.
                                     Because JSX is JavaScript, you can use variables inside it. Here you are
                                     declaring a
-                                    name for the cat, name, and embedding it with curly braces inside <span>&ltText&gt</span>
+                                    name for the cat, name, and embedding it with curly braces inside <span>&lt;Text&gt;</span>
                                 </p>
                             </li>
                             <li>
